# upxz

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.cn.md  README.md  SECURITY.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  scorecard.yml
boot/: upxz-boot.sh
changelog/: v0.1.0.md
docs/: _config.yml  cli.md  format.md  index.md  install.md
docs/_layouts/: default.html
docs/assets/css/: style.css
loader/: Cargo.toml
loader/src/: main.rs
src/: bin_run.rs  compress.rs  format.rs  level.rs  main.rs  sfx.rs
stub/: Cargo.toml
stub/src/: main.rs
tests/: cli.rs
winstub/: Cargo.toml
winstub/src/: main.rs
