[package]
name = "upxz"
version = "0.2.0"
authors = ["ljh-sh <lijunhao@x-cmd.com>"]
edition = "2021"
rust-version = "1.74"
description = "Tiny single-binary file packer. One file in, one file out, magic-checked, zstd-packed."
readme = "README.md"
homepage = "https://github.com/ljh-sh/upxz"
documentation = "https://github.com/ljh-sh/upxz#readme"
license = "Apache-2.0"
repository = "https://github.com/ljh-sh/upxz"
keywords = ["zstd", "pack", "compress", "cli", "single-binary"]
categories = ["compression", "command-line-utilities"]
exclude = [".release-artifacts/", ".github/", "target/", "*.swp", "*.swo", "*~", ".DS_Store"]
build = "build.rs"

[[bin]]
name = "upxz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
zstd = "0.13"
# Pure-Rust gzip backend (miniz_oxide): no C libz to link, so the upxz binary
# stays statically-linked and dependency-light. Codec id 1 in the container
# magic selects gzip; the zstd default (id 0) is unchanged.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

# The SFX stub runs on every invocation of a packed binary; keep it small.
# opt-level="z" + single codegen unit minimize its size. (Cargo forbids
# `panic = "abort"` in per-package profiles; we accept the unwind tables.)
[profile.release.package.upxz-stub]
opt-level = "z"
codegen-units = 1

[workspace]
members = [".", "stub", "winstub"]

# Note: the macOS `upxz-loader` crate (`loader/`) is **deliberately not** a
# workspace member. It is `#![no_std]` + `#![no_main]` and requires its own
# `[profile.release]` with `panic = "abort"` (the precompiled `core` on stable
# is built with unwind; `panic=abort` at the crate root is what makes the
# no_std panic-handler path link cleanly without `-Zbuild-std`). Workspace
# member profiles are ignored in favor of the root profile, so we keep the
# loader outside the workspace and build it standalone from `build.rs`, exactly
# like a vendored third-party crate. See `build.rs` (macOS branch) and
# `loader/Cargo.toml`.
