[package]
name = "upxz-stub"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Linux SFX stub for upxz: reads a .upxz trailer from its own ELF and fexecves the restored binary from a memfd."
publish = false

[[bin]]
name = "upxz-stub"
path = "src/main.rs"

[dependencies]
libc = "0.2"
zstd = "0.13"
# Pure-Rust gzip backend (miniz_oxide). The stub dispatches on the codec byte
# in the .upxz magic: id 0 = zstd (zstd crate), id 1 = gzip (flate2). Matches
# the upxz packer's flate2 feature set.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
